# timecraft

./: .dockerignore  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  Dockerfile  LICENSE  LICENSING.md  Makefile  README.md  buf.gen.yaml  config.go  describe.go  export.go  export_test.go  get.go  get_test.go  go.mod  go.sum  help.go  help_test.go  logs.go  logs_test.go  main.go  main_test.go  profile.go  pull.go  pull_test.go  replay.go  replay_test.go  root.go  root_test.go  run.go  run_test.go  timecraft.go  trace.go  unknown.go  unknown_test.go  version.go  version_test.go
.github/scripts/: publish_docs.sh
.github/workflows/: build.yml  docker.yml  docs.yml  go-lint.yml  go-release.yml  go-test.yml  python.yaml  python.yml  release.yml
WIP/client/: main.go
WIP/server/: main.go
WIP/wasiclient/: main_wasip1.go
client/: client.go  client_default.go  client_wasip1.go
cmd/: replay.go  root.go  run.go
docs/: docs.md  home.md
docs/applications/: _category_.yml  go.md  python.md
docs/architecture/: _category_.yml  htls.md  log.md
format/: timecraft.go
proto/: buf.yaml
python/: .gitignore  Dockerfile  Dockerfile.timecraft  Makefile  README.md  build.sh  download.sh  test.py  test.sh
sdk/: socket.go
sdk/go/: fork.go
sdk/python/: .gitignore  Makefile  README.md  pyproject.toml
sdk/python/src/timecraft/: __init__.py  app.py  client.py  server.py  worker.py
sdk/python/src/timecraft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/src/timecraft/app/: __init__.py  app.py
testdata/: adapter.py  geturl.go  geturl.wasm  go.mod
(+444 files in other folders)
